--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,18 @@
   color: #61dafb;
 }
 
+.ship {
+  position: absolute;
+  border: 3px solid #0c0aa4;
+  background-color: #2093df;
+  z-index: 10;
+}
+
+.kill {
+  border: 3px solid #a40a0a;
+  background-color: #e56b6b;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
