--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,28 @@
   background-color: #e56b6b;
 }
 
+.itemMenu {
+  outline: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 200px;
+  padding: 25px;
+  border-radius: 0;
+  border: 1px solid #000;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: #6b6776;
+  color: #aff9f6;
+  cursor: pointer;
+  transition: all 0.2s linear;
+  letter-spacing: 2px;
+}
+
+.itemMenu:hover {
+  transform: scale(1.02);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
